Drop the overflow:scroll for timetables because it doesn't work for iOs and Android devices. This (sort of) fixes #6

--- a/app/stylesheets/partials/_timetable.scss
+++ b/app/stylesheets/partials/_timetable.scss
@@ -53,8 +53,6 @@
 
 #timetable{
   @include column(20);
-  height: 504px;
-  overflow: auto;
   margin-bottom: 10px;
 }
 
